Fixed OddFellows css on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ header {
   .eventbrite .columns, .thanks .columns {
     width: 100%; }
     .eventbrite .columns .column, .thanks .columns .column {
-      width: 50%; }
+      width: 70%; }
       .eventbrite .columns .column p, .thanks .columns .column p {
         font-size: 20px;
         text-align: center; }
@@ -512,10 +512,20 @@ header {
         display: inline-block;
         height: auto;
         margin: 0 auto;
+        max-width: 100% ;
         width: 400px; }
   .eventbrite iframe {
     min-height: 250px;
   }
+
+@media all and (max-width: 677px) {
+  .thanks {
+    padding: 48px 24px;
+  }
+  .thanks .columns .column {
+    width: 100%;
+  }
+}
 
 .center {
   float: none;
